ui: add support for basic color theming.
* src/zi.lua.in (PATH_THEMEDIR): Path to themes.
* Makefile.am (install_edit, inplace_edit): Substitute
pkgthemedir.
* src/bundle.lua: New file. Initialise global 'theme' table from
a named zi theme file.
* src/main.lua (main): If the user startup files didn't do so
already, then load the default color theme.
* src/term_curses.lua (display): New dictionary mapping curses
font rendering capabilities to generic values.
(init_pair): Create a new curses color pair on demand.
(term_get_attribute): Calculate a curses attribute from a theme
file attribute entry.
* src/term_redisplay.lua (draw_end_of_line, draw_status_line)
(term_tidy): Use themeable font rendering attribute.
* theme/Makefile.am: Install theme files.
* theme/README: Description of the theme files syntax.
* theme/zi.lua: New default theme with minimal chrome coloring.
* theme/zile.lua: New theme, equivalent to pre-theming look.

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,13 +28,17 @@ CLEANFILES =
 DISTCLEANFILES =
 MAINTAINERCLEANFILES =
 
+pkgthemedir = $(pkgdatadir)/theme
+
 install_edit = sed \
 	-e 's|@pkgdatadir[@]|$(pkgdatadir)|g' \
-	-e 's|@pkgdocdir[@]|$(docdir)|g'
+	-e 's|@pkgdocdir[@]|$(docdir)|g' \
+	-e 's|@pkgthemedir[@]|$(pkgthemedir)|g'
 
 inplace_edit = sed \
 	-e 's|@pkgdatadir[@]|$(abs_top_srcdir)/src|g' \
-	-e 's|@pkgdocdir[@]|$(abs_top_srcdir)|g'
+	-e 's|@pkgdocdir[@]|$(abs_top_srcdir)|g' \
+	-e 's|@pkgthemedir[@]|$(abs_top_srcdir)/theme|g'
 
 EXTRA_DIST =						\
 	FAQ						\
@@ -47,6 +51,7 @@ include build-aux/Makefile.am
 include doc/Makefile.am
 include src/Makefile.am
 include tests/Makefile.am
+include theme/Makefile.am
 
 loc:
 	$(CLOC) $(PRODUCTIONSOURCES)
@@ -85,6 +90,7 @@ uninstall-hook:
 	@test -d $(DESTDIR)$(datadir)/doc && rmdir $(DESTDIR)$(datadir)/doc || :
 	@test -d $(DESTDIR)$(man1dir) && rmdir $(DESTDIR)$(man1dir) || :
 	@test -d $(DESTDIR)$(mandir) && rmdir $(DESTDIR)$(mandir) || :
+	@test -d $(DESTDIR)$(pkgthemedir) && rmdir $(DESTDIR)$(pkgthemedir) || :
 	@test -d $(DESTDIR)$(pkgdatadir) && rmdir $(DESTDIR)$(pkgdatadir) || :
 	@test -d $(DESTDIR)$(datadir) && rmdir $(DESTDIR)$(datadir) || :
 	@test -d $(DESTDIR)$(prefix) && rmdir $(DESTDIR)$(prefix) || :
