--- a/src/zi.lua.in
+++ b/src/zi.lua.in
@@ -29,6 +29,7 @@ PACKAGE_BUGREPORT = "@PACKAGE_BUGREPORT@"
 VERSION = "@VERSION@"
 PATH_DATA = "@pkgdatadir@"
 PATH_DOCDIR = "@pkgdocdir@"
+PATH_THEMEDIR = "@pkgthemedir@"
 
 -- Remove current directory from package search path
 package.path = package.path:gsub (";%./%?.lua;", ";")
