syntax: add support for basic syntax highlighting.
* src/grammar/init.lua: New grammar infrastructure.
* src/grammar/lua.lua: New grammar for Lua language.
* src/grammar/Makefile.am: Install syntax grammars.
* src/zi.lua.in (PATH_GRAMMARDIR): Path to themes.
(package.path): Support directory with init.lua.
* Makefile.am (install_edit, inplace_edit): Substitute
pkggrammardir.
* src/bundle.lua (set_grammar): Load a new language grammar.
* src/buffer.lua (buffer_new): Initialise syntax member.
* src/file.lua (find_file): Load the grammar when opening a new
file.
* src/main.lua (main): Highlight the scratch buffer correctly.
* src/syntax.lua: New file. Return a sparse array of attributes
for a line of text according to that buffer's grammar.
* src/term_redisplay.lua (draw_line): Use it to set attributes
as the line is displayed.
* src/Makefile.am (src_zi_LUA): Add new src/syntax.lua.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -50,6 +50,7 @@ src_zi_LUA =						\
 	src/redisplay.lua				\
 	src/registers.lua				\
 	src/search.lua					\
+	src/syntax.lua					\
 	src/tbl_vars.lua				\
 	src/undo.lua					\
 	src/window.lua					\
