--- a/src/zi.lua.in
+++ b/src/zi.lua.in
@@ -30,12 +30,14 @@ VERSION = "@VERSION@"
 PATH_DATA = "@pkgdatadir@"
 PATH_DOCDIR = "@pkgdocdir@"
 PATH_THEMEDIR = "@pkgthemedir@"
+PATH_GRAMMARDIR = "@pkggrammardir@"
 
 -- Remove current directory from package search path
 package.path = package.path:gsub (";%./%?.lua;", ";")
 package.path = package.path:gsub ("^%./%?.lua;", "")
 package.path = package.path:gsub (";%./%?.lua$", "")
 
+package.path = PATH_DATA .. "/?/init.lua;" .. package.path
 package.path = PATH_DATA .. "/?.lua;" .. package.path
 require "loadlua"
 
