syntax: select the appropriate mode according to filename.
* src/grammar/sh.lua: New file, with the syntax parser for
shell scripts.
* src/grammar/c.lua: New file, with the syntax parser for C files.
* src/grammar/Makefile.am (pkggrammar_DATA): Add sh.lua.
* src/tbl_vars.lua (mode_map): New user variable mapping filename
matches to syntax parsers.
* src/file.lua (find_file): Check for and set an appropriate
syntax parser according to the filename.
* src/term_redisplay.lua (draw_status_line): Display the name of
the loaded grammar for the current buffer in its mode-line.

--- a/src/grammar/Makefile.am
+++ b/src/grammar/Makefile.am
@@ -19,4 +19,6 @@
 
 pkggrammar_DATA =					\
 	src/grammar/init.lua				\
-	src/grammar/lua.lua
+	src/grammar/c.lua				\
+	src/grammar/lua.lua				\
+	src/grammar/sh.lua
