--- a/grammar/Makefile.am
+++ b/grammar/Makefile.am
@@ -18,4 +18,5 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 pkggrammar_DATA =					\
+	grammar/diff.syntax				\
 	grammar/lua.syntax
