zz: initial refactoring to enable zz lua editor.
FIXME: fill this in when the code stops churning!

--- a/Makefile.am
+++ b/Makefile.am
@@ -62,6 +62,7 @@ inplace_edit = sed					\
 
 include src/Makefile.am
 include zmacs/Makefile.am
+include zz/Makefile.am
 include tests/Makefile.am
 
 
