zz: clone the zmacs editor as a foundation for zz.
* local.mk (clean_local): New list of rules to run for `make
clean'.
(clean-local): Depends on the new $(clean_local) list.
* lib/zmacs/zmacs.mk (clean-local): Rename from this...
(zmacs-clean-local): ...to this.  Add it to clean_local list.
* .gitignore: Move lib/zmacs ignores from here...
* lib/zmacs/.gitignore: ...to here.
* bin/zz: New file.  A copy of bin/zmacs with zz substituted for
zmacs throughout.
* lib/zz: New directory. Likewise.
* local.mk: Include new lib/zz/zz.mk fragment.
* configure.ac (AC_CONFIG_FILES): Add lib/zz/zz.
* FAQ: New Zz Q&A.
* NEWS: Update.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/configure.ac
+++ b/configure.ac
@@ -58,4 +58,5 @@ AC_PROG_EGREP
 dnl Generate output
 AC_CONFIG_FILES([Makefile lib/zile/version.lua])
 AC_CONFIG_FILES([lib/zmacs/zmacs], [chmod +x lib/zmacs/zmacs])
+AC_CONFIG_FILES([lib/zz/zz], [chmod +x lib/zz/zz])
 AC_OUTPUT
