rockspecs: lua-stdlib 35 was renamed back to stdlib in LR repo.
* rockspec.conf (dependencies): Rename lua-stdlib back to stdlib
to match LuaRocks repo renaming.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/rockspec.conf
+++ b/rockspec.conf
@@ -11,7 +11,7 @@ dependencies:
 - alien >= 0.7.0
 - lua >= 5.2
 - luaposix >= 29
-- lua-stdlib >= 35
+- stdlib >= 35
 - lrexlib-gnu >= 2.7.1
 
 source:
