--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -55,6 +55,8 @@ slingshot_files='
 	build-aux/update-copyright
 	m4/ax_compare_version.m4
 	m4/ax_lua.m4
+	m4/slingshot.m4
+	travis.yml.in
 '
 
 # No need to do any gnulib-tooling here.
