--- a/configure.ac
+++ b/configure.ac
@@ -52,6 +52,7 @@ AC_PROG_SED
 AC_PROG_EGREP
 
 dnl Generate output
+SS_CONFIG_TRAVIS
 AC_CONFIG_FILES([Makefile lib/zile/version.lua])
 AC_CONFIG_FILES([lib/zmacs/zmacs], [chmod +x lib/zmacs/zmacs])
 AC_CONFIG_FILES([lib/zz/zz], [chmod +x lib/zz/zz])
