travis: use a custom travis.yml script.
Slingshot travis.yml is for testing with various Lua versions,
but Zile is Lua5.2 only, and needs to install with both LuaRocks
and with `make install`.
* bootstrap.conf (slingshot_files): Remove travis.yml.in.
* .gitignore: Remove travis.yml.in.
* travis.yml.in: New file, customised from slingshot version.
* .travis.yml: Regenerate.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/travis.yml.in
+++ b/travis.yml.in
@@ -3,12 +3,12 @@ language: erlang
 
 env:
   global:
-    - PACKAGE=zile
+    - PACKAGE=@PACKAGE@
     - ROCKSPEC=$PACKAGE-git-1.rockspec
     - LUAROCKS_CONFIG=build-aux/luarocks-config.lua
     - LUAROCKS_BASE=luarocks-2.1.1
     - LUAROCKS="$LUA $HOME/bin/luarocks"
-    - GENDOC=luarocks/bin/
+    - GENDOC=luarocks/bin/@GENDOC@
     - SPECL=bin/specl
   matrix:
     - LUA=lua5.2             LUA_INCDIR=/usr/include/lua5.2     LUA_SUFFIX=5.2
@@ -53,7 +53,7 @@ script:
   # Set Lua and Shell paths up for local luarocks tree.
   - eval `$LUAROCKS path`
   - export PATH=`pwd`/luarocks/bin:$PATH
-  - $LUAROCKS install lyaml;
+  @EXTRA_ROCKS@
   - make rockspecs LUAROCKS="$LUAROCKS" V=1
     || { $LUAROCKS path; cat $ROCKSPEC; }
   # LuaRocks make will fail if dependencies are missing.
