doc: start LDoc based api documentation.
* configure.ac (AC_PATH_PROG): Find a suitable ldoc.
(SS_CONFIG_TRAVIS): Add ldoc rock dependency.
* doc/config.ld: New file. List LDoc commented sources.
* local.mk (EXTRA_DIST): Add doc/config.ld.
(dist_doc_DATA, dist_classes_DATA, dist_modules_DATA): Distribute
and install LDoc documentation.
* .gitignore: Adjust.
* .travis.yml: Regenerate.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,12 @@
 /config.status.lineno
 /configure
 /configure.lineno
-/doc/
+/doc/*.sample
+/doc/*.1
+/doc/classes
+/doc/index.html
+/doc/ldoc.css
+/doc/modules
 /lib/zile/version.lua
 /m4/
 /maint.mk
