--- a/lib/zmacs/zmacs.in
+++ b/lib/zmacs/zmacs.in
@@ -1,6 +1,8 @@
 #! /bin/sh
 # @configure_input@
+
 # Wrapper around a non installed m4 to make it work as an installed one.
+# Written by Gary V. Vaughan, 2013
 #
 # Copyright (C) 2013-2014 Free Software Foundation, Inc.
 #
@@ -18,8 +20,6 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#
-# Written by Gary V. Vaughan <gary@gnu.org>
 
 # Be Bourne compatible
 if test -n "${ZSH_VERSION+set}" && (emulate sh) >/dev/null 2>&1; then
