configury: re-enable './configure; make; sudo make install` mode.
* bin/zmacs, bin/zz: Reset LUA_INIT and LUA_INIT_5_2 before
re-execing with $LUA.
Also, if @datadir@ has been substituted with a real filepath,
add it to LUA_PATH before re-execing.
* lib/zmacs/zmacs.mk (lib/zmacs/commands.lua): Reset LUA_INIT
and LUA_INIT_5_2 before running zlc.
* local.mk (install_exec_hook, install-exec-hook): Support per-
editor install-exec-hook rules.
* lib/zmacs/zmacs.mk (zmacs-install-exec-hook): Substitute
for @datadir@ after 'make install' so that zmacs can find its
Lua sources.
* lib/zz/zz.mk (zz-install-exec-hook): Likewise.
* lib/zmacs/zmacs.in, lib/zz/zz.in: Improve wrapper comment.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ install:
 # Configure and build.
 script:
   - ./bootstrap
-  - ./configure LUA="$LUA"
+  - ./configure LUA="$LUA" --prefix=`pwd`/_inst
   - make $LUAROCKS_CONFIG
     LUA="$LUA" LUA_INCDIR="$LUA_INCDIR" V=1
     || cat $LUAROCKS_CONFIG config.log
@@ -61,3 +61,7 @@ script:
   # Use bin/specl if we built it, or else the specl rock we just installed.
   - test -f "$SPECL" || SPECL=luarocks/bin/specl;
     LUA_PATH=`pwd`'/lib/?.lua;'"${LUA_PATH-;}" make check SPECL="$SPECL" V=1
+  # Ensure zmacs/zz work from `make install` tree too
+  - make all install
+  - _inst/bin/zmacs --help
+  - _inst/bin/zz --help
