--- a/lib/zz/zz.in
+++ b/lib/zz/zz.in
@@ -1,7 +1,7 @@
 #! /bin/sh
 # @configure_input@
 
-# Wrapper around a non installed m4 to make it work as an installed one.
+# Environment setting wrapper for uninstalled zz.
 # Written by Gary V. Vaughan, 2013
 #
 # Copyright (C) 2013-2014 Free Software Foundation, Inc.
