configury: require a specific LDoc, to match doc-comments.
* bootstrap.conf (buildreq): Add gvvaughan/ldoc-next-1.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -35,6 +35,7 @@ buildreq='
         git        1.5.5   http://git-scm.com
         gpg        1.4.11  http://www.gnupg.org
         help2man   1.29    http://www.gnu.org/s/help2man
+        ldoc       =next-1 http://raw.github.com/gvvaughan/LDoc/next/ldoc-next-1.rockspec
         perl       5.5     http://perl.com
         tar        -       http://www.gnu.org/s/tar
 '
