--- a/.travis.yml
+++ b/.travis.yml
@@ -4,65 +4,62 @@ language: erlang
 env:
   global:
     - PACKAGE=zile
-    - ROCKSPEC=$PACKAGE-git-1.rockspec
-    - LUAROCKS_CONFIG=build-aux/luarocks-config.lua
+    - ROCKSPEC=zile-git-1.rockspec
     - LUAROCKS_BASE=luarocks-2.1.1
-    - LUAROCKS="$LUA $HOME/bin/luarocks"
-    - GENDOC=luarocks/bin/ldoc
-    - SPECL=bin/specl
+    - LDOC_ROCKSPEC=http://raw.github.com/gvvaughan/LDoc/next/ldoc-next-1.rockspec
   matrix:
     - LUA=lua5.2             LUA_INCDIR=/usr/include/lua5.2     LUA_SUFFIX=5.2
 
 # Tool setup.
 install:
-  - sudo apt-get install help2man
-  - sudo apt-get install lua5.1
-  - sudo apt-get install liblua5.1-dev
   - sudo apt-get install lua5.2
   - sudo apt-get install liblua5.2-dev
-  # Put back the links for libyaml, which missing on recent Travis VMs
-  - test -f /usr/lib/libyaml.so ||
-    sudo find /usr/lib -name 'libyaml*' -exec ln -s {} /usr/lib \;
-  # Luadoc and Ldoc work best on Travis with Lua 5.1.
-  # LDoc master is unstable and crashy at the moment, this snapshot
-  # works for me. But apt-get's luarocks doesn't support source.branch
-  # in rockspec files, so we have to clone manually :(
-  - sudo apt-get install luarocks
-  - git clone -b next --depth 1 https://github.com/gvvaughan/LDoc.git
-  - ( cd LDoc && sudo luarocks make ldoc-next-1.rockspec )
-  - mkdir -p luarocks/bin
-  - sed 's|^exec "[^"]*"|exec lua5.1|' `which ldoc` > $GENDOC
-  - chmod a+rx $GENDOC
-  # Install a recent luarocks release locally for everything else.
+  - sudo apt-get install help2man
+
+  # Install a recent luarocks release.
   - wget http://luarocks.org/releases/$LUAROCKS_BASE.tar.gz
   - tar zxvpf $LUAROCKS_BASE.tar.gz
-  - cd $LUAROCKS_BASE
-  - ./configure
-    --prefix=$HOME --lua-version=$LUA_SUFFIX --lua-suffix=$LUA_SUFFIX
-    --with-lua-include=$LUA_INCDIR
-  - make all install
-  - cd ..
+  - ( cd $LUAROCKS_BASE;
+      ./configure
+        --prefix=/usr/local --lua-version=$LUA_SUFFIX --lua-suffix=$LUA_SUFFIX
+        --with-lua-include=$LUA_INCDIR;
+      make;
+      sudo make install; )
+  - eval `luarocks path`
+
+  # Put back the links for libyaml, which went missing on recent Travis VMs
+  - test -f /usr/lib/libyaml.so ||
+    sudo find /usr/lib -name 'libyaml*' -exec ln -s {} /usr/lib \;
+
+  # Bootstrap checks this is available, so we need an early installation.
+  - sudo luarocks install $LDOC_ROCKSPEC
 
 # Configure and build.
 script:
+  # Make LUAROCKS_CONFIG to point at local rocks tree.
   - ./bootstrap
   - ./configure LUA="$LUA"
-  - make $LUAROCKS_CONFIG
-    LUA="$LUA" LUA_INCDIR="$LUA_INCDIR" V=1
-    || cat $LUAROCKS_CONFIG config.log
-  # Set Lua and Shell paths up for local luarocks tree.
-  - eval `$LUAROCKS path`
-  - export PATH=`pwd`/luarocks/bin:$PATH
-  - $LUAROCKS install lyaml;
-  - make rockspecs LUAROCKS="$LUAROCKS" V=1
-    || { $LUAROCKS path; cat $ROCKSPEC; }
-  # LuaRocks make will fail if dependencies are missing.
-  - $LUAROCKS make $ROCKSPEC LUA="$LUA"
-  # Use bin/specl if we built it, or else the specl rock we just installed.
-  - test -f "$SPECL" || SPECL=luarocks/bin/specl;
-    LUA_PATH=`pwd`'/lib/?.lua;'"${LUA_PATH-;}" make check SPECL="$SPECL" V=1
-  # Ensure zmacs/zz work from `make install` tree too
+  - sudo luarocks remove ldoc
+  - export LUAROCKS_CONFIG=build-aux/luarocks-config.lua
+  - make $LUAROCKS_CONFIG LUA="$LUA" LUA_INCDIR="$LUA_INCDIR" V=1
+
+  # Reset paths for local rocks tree.
+  - eval `luarocks path`
+  - PATH=`pwd`/luarocks/bin:$PATH
+
+  # Make rockspecs.
+  - luarocks install lyaml
+  - make rockspecs V=1
+
+  # Check installation from rockspec.
+  - luarocks install $LDOC_ROCKSPEC
+  - luarocks make $ROCKSPEC LUA="$LUA"
+  - luarocks/bin/zmacs --version
+  - luarocks/bin/zz --version
+
+  # Check autotools installation.
+  - luarocks remove $PACKAGE
   - ./configure LUA="$LUA" --prefix=`pwd`/_inst
-  - make all install
+  - make clean all install || lib/zz/zz --version
   - _inst/bin/zmacs --help
   - _inst/bin/zz --help
