--- a/travis.yml.in
+++ b/travis.yml.in
@@ -5,60 +5,64 @@ env:
   global:
     - PACKAGE=@PACKAGE@
     - ROCKSPEC=@PACKAGE@-git-1.rockspec
+    - LUAROCKS_CONFIG=build-aux/luarocks-config.lua
     - LUAROCKS_BASE=luarocks-2.1.1
-    - LDOC_ROCKSPEC=http://raw.github.com/gvvaughan/LDoc/next/ldoc-next-1.rockspec
+    - LUAROCKS="$LUA $HOME/bin/luarocks"
   matrix:
     - LUA=lua5.2             LUA_INCDIR=/usr/include/lua5.2     LUA_SUFFIX=5.2
 
 # Tool setup.
 install:
-  - sudo apt-get install lua5.2
-  - sudo apt-get install liblua5.2-dev
-  - sudo apt-get install help2man
-
-  # Install a recent luarocks release.
-  - wget http://luarocks.org/releases/$LUAROCKS_BASE.tar.gz
-  - tar zxvpf $LUAROCKS_BASE.tar.gz
-  - ( cd $LUAROCKS_BASE;
-      ./configure
-        --prefix=/usr/local --lua-version=$LUA_SUFFIX --lua-suffix=$LUA_SUFFIX
-        --with-lua-include=$LUA_INCDIR;
-      make;
-      sudo make install; )
-  - eval `luarocks path`
-
   # Put back the links for libyaml, which went missing on recent Travis VMs
   - test -f /usr/lib/libyaml.so ||
     sudo find /usr/lib -name 'libyaml*' -exec ln -s {} /usr/lib \;
 
-  # Bootstrap checks this is available, so we need an early installation.
-  - sudo luarocks install $LDOC_ROCKSPEC
+  - sudo apt-get install help2man
+  - sudo apt-get install lua5.2
+  - sudo apt-get install liblua5.2-dev
+
+  # Install a recent luarocks release locally.
+  - wget http://luarocks.org/releases/$LUAROCKS_BASE.tar.gz
+  - tar zxvpf $LUAROCKS_BASE.tar.gz
+  - ( cd $LUAROCKS_BASE;
+      ./configure
+        --prefix=$HOME --lua-version=$LUA_SUFFIX --lua-suffix=$LUA_SUFFIX
+        --with-lua-include=$LUA_INCDIR;
+      make;
+      sudo make install; )
 
 # Configure and build.
 script:
-  # Make LUAROCKS_CONFIG to point at local rocks tree.
-  - ./bootstrap
+  # Initial bootstrap to build luarocks-config.lua, before we've
+  # installed our rocks.
+  - ./bootstrap --skip-rock-checks
   - ./configure LUA="$LUA"
-  - sudo luarocks remove ldoc
-  - export LUAROCKS_CONFIG=build-aux/luarocks-config.lua
-  - make $LUAROCKS_CONFIG LUA="$LUA" LUA_INCDIR="$LUA_INCDIR" V=1
+  - make $LUAROCKS_CONFIG
+    LUA="$LUA" LUA_INCDIR="$LUA_INCDIR" V=1
+    || cat $LUAROCKS_CONFIG config.log
 
-  # Reset paths for local rocks tree.
-  - eval `luarocks path`
-  - PATH=`pwd`/luarocks/bin:$PATH
+  # Set Lua and Shell paths up for local luarocks tree.
+  # this package depends on will be installed.
+  - eval `$LUAROCKS path`
+  - export PATH=`pwd`/luarocks/bin:$PATH
 
-  # Make rockspecs.
-  - luarocks install lyaml
-  - make rockspecs V=1
+  # Install extra rocks into $LUAROCKS_CONFIG rocks tree.
+  - $LUAROCKS install lyaml;
+  # LDoc 1.4.0 is not in luarocks yet, and LDoc master has no rockspec :(
+  - $LUAROCKS install http://raw.github.com/gvvaughan/LDoc/next/ldoc-next-1.rockspec
 
-  # Check installation from rockspec.
-  - luarocks install $LDOC_ROCKSPEC
-  - luarocks make $ROCKSPEC LUA="$LUA"
+  # Make git rockspec for @PACKAGE@
+  - make rockspecs LUAROCKS="$LUAROCKS" V=1
+    || { $LUAROCKS path; cat $ROCKSPEC; }
+
+  # The git rockspec will rerun bootstrap, and check any rock versions
+  # in bootstrap.conf:buildreq this time.
+  - $LUAROCKS make $ROCKSPEC LUA="$LUA"
   - luarocks/bin/zmacs --version
   - luarocks/bin/zz --version
 
   # Check autotools installation.
-  - luarocks remove $PACKAGE
+  - $LUAROCKS remove $PACKAGE
   - ./configure LUA="$LUA" --prefix=`pwd`/_inst
   - make clean all install || lib/zz/zz --version
   - _inst/bin/zmacs --help
