specl: start adding specl specifications for zlisp.
Start with the previously untested (previously untestable!)
`where-is` command.
* configure.ac (AC_PATH_PROG): Probe for a specl command.
* bootstrap.conf (buildreq): Add specl.  Note, we need bugfixes
from an unreleased Specl at the moment.
(slingshot_files): Add bulid-aux/specl.mk.
* lib/zmacs/specs/spec_helper.lua: New file. Matchers and helpers
for running zmacs and checking buffer and minibuf results.
* lib/zmacs/specs/zlisp_bind_spec.yaml (where-is): Specify
behaviour of `where-is` command.
* lib/zmacs/specs/specs.mk: New file. Declare specl spec files.
* local.mk: Include it.
* travis.yml.in (script): Check specs.
* .travis.yml: Regenerate.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -32,12 +32,12 @@ checkout_only_file=gl/top/README-release.diff
 
 # Build prerequisites
 buildreq='
-        git        1.5.5   http://git-scm.com
-        gpg        1.4.11  http://www.gnupg.org
-        help2man   1.29    http://www.gnu.org/s/help2man
-        ldoc       =next-1 http://raw.github.com/gvvaughan/LDoc/next/ldoc-next-1.rockspec
-        perl       5.5     http://perl.com
-        tar        -       http://www.gnu.org/s/tar
+  git      1.7.0   http://git-scm.com
+  gpg      1.4.11  http://www.gnupg.org
+  help2man 1.29    http://www.gnu.org/s/help2man
+  ldoc     =next-1 http://raw.github.com/gvvaughan/LDoc/next/ldoc-next-1.rockspec
+  specl    10-1    http://raw.github.com/gvvaughan/specl/release/specl-10-1.rockspec
+  tar      -       http://www.gnu.org/s/tar
 '
 
 # List of slingshot files to link into stdlib tree before autotooling.
@@ -53,6 +53,7 @@ slingshot_files='
 	build-aux/release.mk
 	build-aux/rockspecs.mk
 	build-aux/sanity.mk
+	build-aux/specl.mk
 	build-aux/update-copyright
 	m4/ax_compare_version.m4
 	m4/ax_lua.m4
