stdlib: require lua-stdlib 37.
Move to latest stdlib in preparation for using it's better
object system.
* rockspec.conf (dependencies): Bump stdlib to 37.
* bin/zz, bin/zmacs (require_version): Likewise.
* lib/zmacs/zlc: Rewrite option parsing around std.optparse,
instead of std.getopt.
* lib/zmacs/zlc, lib/zile/zlisp.lua: Require "io", instead of
obsolete "io_ext".
* lib/zile/lib.lua (iscallable): Now that all std.container and
std.object based tables have __call metamethods, be more careful
about detecting callable symbols.
* .travis.yml (script): Add another temporary github rockspec
while waiting for stdlib 37 to reach the LuaRocks repo.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ env:
     - LUAROCKS_CONFIG=build-aux/luarocks-config.lua
     - LUAROCKS_BASE=luarocks-2.1.1
     - LUAROCKS="$LUA $HOME/bin/luarocks"
-    - LDOC_ROCKSPEC=http://raw.github.com/gvvaughan/LDoc/next/ldoc-next-1.rockspec
-    - SPECL_ROCKSPEC=http://raw.github.com/gvvaughan/specl/release/specl-10-1.rockspec
+    - GHROOT=http://raw.github.com
+    - LDOC_ROCKSPEC=$GHROOT/gvvaughan/LDoc/next/ldoc-next-1.rockspec
+    - SPECL_ROCKSPEC=$GHROOT/gvvaughan/specl/release/specl-10-1.rockspec
+    - STDLIB_ROCKSPEC=$GHROOT/rrthomas/lua-stdlib/release/stdlib-37-1.rockspec
   matrix:
     - LUA=lua5.2             LUA_INCDIR=/usr/include/lua5.2     LUA_SUFFIX=5.2
 
@@ -54,6 +56,8 @@ script:
   - $LUAROCKS install $LDOC_ROCKSPEC
   # We need bugfixes not yet in a released version of Specl.
   - $LUAROCKS install $SPECL_ROCKSPEC
+  # STDLIBv37 didn't reach LuaRocks repo yet..
+  - $LUAROCKS install $STDLIB_ROCKSPEC
 
   # Make git rockspec for zile
   - make rockspecs LUAROCKS="$LUAROCKS" V=1
