--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,6 @@ env:
     - LUAROCKS_CONFIG=build-aux/luarocks-config.lua
     - LUAROCKS_BASE=luarocks-2.1.1
     - LUAROCKS="$LUA $HOME/bin/luarocks"
-    - GHROOT=http://raw.github.com
-    - LDOC_ROCKSPEC=$GHROOT/gvvaughan/LDoc/next/ldoc-next-1.rockspec
-    - SPECL_ROCKSPEC=$GHROOT/gvvaughan/specl/release/specl-10-1.rockspec
-    - STDLIB_ROCKSPEC=$GHROOT/rrthomas/lua-stdlib/release/stdlib-37-1.rockspec
   matrix:
     - LUA=lua5.2             LUA_INCDIR=/usr/include/lua5.2     LUA_SUFFIX=5.2
 
@@ -51,13 +47,7 @@ script:
   - export PATH=`pwd`/luarocks/bin:$PATH
 
   # Install extra rocks into $LUAROCKS_CONFIG rocks tree.
-  - $LUAROCKS install lyaml;
-  # LDoc 1.4.0 is not in luarocks yet, and LDoc master has no rockspec :(
-  - $LUAROCKS install $LDOC_ROCKSPEC
-  # We need bugfixes not yet in a released version of Specl.
-  - $LUAROCKS install $SPECL_ROCKSPEC
-  # STDLIBv37 didn't reach LuaRocks repo yet..
-  - $LUAROCKS install $STDLIB_ROCKSPEC
+  - $LUAROCKS install lyaml; $LUAROCKS install specl; $LUAROCKS install ldoc
 
   # Make git rockspec for zile
   - make rockspecs LUAROCKS="$LUAROCKS" V=1
