--- a/travis.yml.in
+++ b/travis.yml.in
@@ -8,8 +8,6 @@ env:
     - LUAROCKS_CONFIG=build-aux/luarocks-config.lua
     - LUAROCKS_BASE=luarocks-2.1.1
     - LUAROCKS="$LUA $HOME/bin/luarocks"
-    - LDOC_ROCKSPEC=http://raw.github.com/gvvaughan/LDoc/next/ldoc-next-1.rockspec
-    - SPECL_ROCKSPEC=http://raw.github.com/gvvaughan/specl/release/specl-10-1.rockspec
   matrix:
     - LUA=lua5.2             LUA_INCDIR=/usr/include/lua5.2     LUA_SUFFIX=5.2
 
@@ -49,11 +47,7 @@ script:
   - export PATH=`pwd`/luarocks/bin:$PATH
 
   # Install extra rocks into $LUAROCKS_CONFIG rocks tree.
-  - $LUAROCKS install lyaml;
-  # LDoc 1.4.0 is not in luarocks yet, and LDoc master has no rockspec :(
-  - $LUAROCKS install $LDOC_ROCKSPEC
-  # We need bugfixes not yet in a released version of Specl.
-  - $LUAROCKS install $SPECL_ROCKSPEC
+  - $LUAROCKS install lyaml; $LUAROCKS install specl; $LUAROCKS install ldoc
 
   # Make git rockspec for @PACKAGE@
   - make rockspecs LUAROCKS="$LUAROCKS" V=1
