--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -35,8 +35,8 @@ buildreq='
   git      1.7.0   http://git-scm.com
   gpg      1.4.11  http://www.gnupg.org
   help2man 1.29    http://www.gnu.org/s/help2man
-  ldoc     =next-1 http://raw.github.com/gvvaughan/LDoc/next/ldoc-next-1.rockspec
-  specl    10-1    http://raw.github.com/gvvaughan/specl/release/specl-10-1.rockspec
+  ldoc     1.4.0   http://luarocks.org/repositories/rocks/ldoc-1.4.2-1.rockspec
+  specl    10      http://raw.github.com/gvvaughan/specl/release/specl-10-1.rockspec
   tar      -       http://www.gnu.org/s/tar
 '
 
