doc: add the package name and version to html doc page titles.
* build-aux/config.ld: Move from here...
* build-aux/config.ld.in: ...to here.
(title, project): Substitute @VERSION@.
* .gitignore: Add build-aux/config.ld.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 /aclocal.m4
 /autom4te.cache
 /build-aux/
-!/build-aux/config.ld
+!/build-aux/config.ld.in
 !/build-aux/git-log-fix
 !/build-aux/sanity-cfg.mk
 /config.cache
