--- a/configure.ac
+++ b/configure.ac
@@ -56,6 +56,7 @@ AC_PROG_EGREP
 dnl Generate output
 SS_CONFIG_TRAVIS([ldoc])
 AC_CONFIG_FILES([Makefile], [chmod 444 Makefile])
+AC_CONFIG_FILES([build-aux/config.ld], [chmod 444 build-aux/config.ld])
 AC_CONFIG_FILES([lib/zile/version.lua], [chmod 444 lib/zile/version.lua])
 AC_CONFIG_FILES([lib/zmacs/zmacs], [chmod 555 lib/zmacs/zmacs])
 AC_CONFIG_FILES([lib/zz/zz], [chmod 555 lib/zz/zz])
