astr: rename AStr to MutableString.
* lib/zile/astr.lua: Move from here...
* lib/zile/MutableString.lua: ...to here.
Adjust internal references to astr and AStr accordingly.
* bin/zmacs, bin/zz: Remove `require "zile.astr"`.
* lib/zile/estr.lua, lib/zile/buffer.lua: Add
`require "zile.MutableString"`.
* build/aux/config.ld.in, local.mk (dist_classes_DATA)
lib/zile/zile.mk (dist_pkgdata_DATA): Adjust.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/build-aux/config.ld.in
+++ b/build-aux/config.ld.in
@@ -7,8 +7,8 @@ dir = "."
 
 file = {
   -- Classes
-  "../lib/zile/astr.lua",
   "../lib/zile/Cons.lua",
+  "../lib/zile/MutableString.lua",
   "../lib/zile/Set.lua",
   "../lib/zile/Symbol.lua",
 
