FileString: new name for EStr, now with LDocs.
* bin/zmacs, bin/zz: Remove `require "zile.estr"`.
Adjust all callers.
* lib/zile/estr.lua: Moved from here...
* lib/zile/FileString.lua: ...to here.
Adjust all callers.
* lib/zile/zile.mk (dist_pkgdata_DATA): Adjust.
* lib/zile/FileString.lua: Move object methods into shared
metatable to reduce object size, and speed up cloning.
Add LDocs.
* build_aux/config.ld (file): Add lib/zile/FileString.lua.
* local.mk (dist_classes_DATA): Add doc/zile.FileString.html.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/build-aux/config.ld.in
+++ b/build-aux/config.ld.in
@@ -8,6 +8,7 @@ dir = "."
 file = {
   -- Classes
   "../lib/zile/Cons.lua",
+  "../lib/zile/FileString.lua",
   "../lib/zile/MutableString.lua",
   "../lib/zile/Set.lua",
   "../lib/zile/Symbol.lua",
