--- a/.gitignore
+++ b/.gitignore
@@ -25,12 +25,7 @@
 /config.status.lineno
 /configure
 /configure.lineno
-/doc/*.sample
-/doc/*.1
-/doc/classes
-/doc/index.html
-/doc/ldoc.css
-/doc/modules
+/doc
 /lib/zile/version.lua
 /m4/
 /maint.mk
